# badmoodle

./: CHANGELOG.md  CHANGES.md  README.md  badmoodle.py  pyproject.toml
lib/: scraper.py  update.py  version.py
tests/: __init__.py  test_update.py  test_version.py
utils/: __init__.py  argparse.py  logging.py  output.py
vulns/: Atto_Editor_Stored_XSS.py  Dashboard_Stored_XSS.py  __init__.py  open-redirect-bitnami-moodle.py
